--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./tests/cases --recursive --watch",
-    "start": "webpack-dev-server --content-base dist/",
+    "start": "webpack-dev-server --content-base tests/",
     "watch": "webpack --watch --progress",
     "pack": "webpack --progress"
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:virgindata/ack-x.git"
+    "url": "https://github.com/AckerApple/ack-x.git"
   },
   "keywords": [
     "expose",
@@ -19,12 +19,11 @@
   ],
   "author": "Acker Apple",
   "license": "ISC",
-  "dependencies": {
-    "ack-p": "https://github.com/AckerApple/ack-p.git",
-    "debug": "^2.2.0"
-  },
   "devDependencies": {
+    "ack-p": "https://github.com/AckerApple/ack-p.git",
+    "debug": "^2.2.0",
     "mocha": "^2.4.5",
-    "mocha-loader": "^0.7.1"
+    "mocha-loader": "^0.7.1",
+    "webpack": "^1.12.14"
   }
 }
