--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha ./test/cases --recursive --watch",
     "start": "webpack-dev-server --content-base test/",
     "watch": "webpack --watch --progress",
-    "pack": "webpack --progress"
+    "bundle": "webpack --progress"
   },
   "repository": {
     "type": "git",
