--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ack-x",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Javascript variable exposing library",
   "main": "index.js",
   "scripts": {
     "test": "mocha ./test/cases --recursive --watch",
     "start": "webpack-dev-server --content-base test/",
     "watch": "webpack --watch --progress",
-    "bundle": "webpack --progress"
+    "build": "webpack --progress"
   },
   "repository": {
     "type": "git",
