--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ack-x",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "Javascript variable exposing library",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
   "author": "Acker Apple",
   "license": "ISC",
   "dependencies": {
-    "ack-p": "https://github.com/AckerApple/ack-p.git",
+    "ack-p": "^0.0.3",
     "debug": "^2.2.0"
   },
   "devDependencies": {
