--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ack-x",
-  "version": "1.2.10",
+  "version": "1.2.11",
   "description": "Javascript variable exposing library",
   "main": "index.js",
   "scripts": {
@@ -28,5 +28,8 @@
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
     "webpack": "^1.12.14"
+  },
+  "jspm":{
+    "main": "index-browser"
   }
 }
