--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ack-x",
-  "version": "1.2.15",
+  "version": "1.2.16",
   "description": "Javascript variable exposing library",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,6 @@
     "webpack": "^1.12.14"
   },
   "jspm": {
-    "main": "dist/ack-x-min"
+    "main": "index-browser"
   }
 }
