--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ack-x",
-  "version": "1.2.17",
+  "version": "1.2.18",
   "description": "Javascript variable exposing library",
   "main": "index.js",
   "scripts": {
@@ -19,10 +19,11 @@
     "javascript exposing"
   ],
   "author": "Acker Apple",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "ack-p": "^1.0.4",
-    "debug": "^2.2.0"
+    "debug": "^2.2.0",
+    "moment": "^2.14.1"
   },
   "devDependencies": {
     "mocha": "^2.4.5",
