--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ack-x",
-  "version": "1.2.43",
+  "version": "1.3.0",
   "description": "Javascript variable exposing library",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "mocha ./test/cases --recursive",
     "test:watch": "mocha ./test/cases --recursive --watch",
     "start": "webpack-dev-server --content-base test/",
     "watch": "webpack --watch --progress",
-    "build": "webpack --progress"
+    "build": "webpack --progress",
+    "build:js": "tsc ts/* --outDir js --declaration true"
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
+    "typescript": "^2.5.3",
     "webpack": "^1.12.14"
   },
   "jspm": {
