--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:watch": "mocha ./test/cases --recursive --watch",
     "start": "webpack-dev-server --content-base test/",
     "watch": "webpack --watch --progress",
-    "build": "webpack --progress",
+    "build": "npm-run-all build:js build:dist",
+    "build:dist": "webpack --progress",
     "build:js": "tsc ts/* --outDir js --declaration true"
   },
   "repository": {
@@ -30,6 +31,7 @@
   "devDependencies": {
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
+    "npm-run-all": "^4.1.1",
     "typescript": "^2.5.3",
     "webpack": "^1.12.14"
   },
