--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ack-x",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Javascript variable exposing library",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "js/index.js",
+  "typings": "js/index.d.ts",
   "scripts": {
     "test": "mocha ./test/cases --recursive",
     "test:watch": "mocha ./test/cases --recursive --watch",
