--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ack-x",
-  "version": "1.3.25",
+  "version": "1.4.0",
   "description": "Javascript variable exposing library",
   "main": "js/index.js",
   "typings": "js/index.d.ts",
@@ -32,9 +32,8 @@
     "mocha": "^4.0.1",
     "npm-run-all": "^4.1.2",
     "typescript": "^2.5.3",
-    "webpack": "^3.10.0"
-  },
-  "jspm": {
-    "main": "index-browser"
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   }
 }
