--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ack-x",
-  "version": "1.4.10",
+  "version": "1.5.0",
   "description": "Javascript variable exposing library",
   "main": "js/index.js",
   "typings": "js/index.d.ts",
@@ -10,7 +10,7 @@
     "start": "webpack-dev-server --content-base test/",
     "watch": "webpack --watch --progress",
     "build": "npm-run-all build:js build:dist",
-    "build:dist": "webpack --progress",
+    "build:dist": "webpack --progress --mode=production",
     "build:js": "tsc ts/* --outDir js --declaration true"
   },
   "repository": {
