--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "webpack --watch --progress",
     "build": "npm-run-all build:js build:dist",
     "build:dist": "webpack --progress --mode=production",
-    "build:js": "tsc ts/* --outDir js --declaration true"
+    "build:js": "tsc --project ./ts/tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -24,16 +24,16 @@
   "author": "Acker Apple",
   "license": "MIT",
   "dependencies": {
-    "ack-p": "^1.0.4",
-    "debug": "^4.0.1",
+    "ack-p": "^1.0.14",
+    "debug": "^4.1.0",
     "moment": "^2.22.2"
   },
   "devDependencies": {
-    "mocha": "^4.0.1",
-    "npm-run-all": "^4.1.2",
-    "typescript": "^2.5.3",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15"
+    "mocha": "^5.2.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^3.2.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
   }
 }
