--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ack-x",
-  "version": "1.5.5",
+  "version": "1.5.6",
   "description": "Javascript variable exposing library",
   "main": "js/index.js",
   "typings": "js/index.d.ts",
@@ -26,7 +26,7 @@
   "dependencies": {
     "ack-p": "^1.0.14",
     "debug": "^4.1.0",
-    "moment": "^2.22.2"
+    "moment-mini": "^2.22.1"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
